<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <Button
        android:id="@+id/btnActividad1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:text="@string/activity_1"
        app:cornerRadius="0sp" />

    <Button
        android:id="@+id/btnActividad2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/activity_2"
        app:cornerRadius="0sp" />

    <Button
        android:id="@+id/btnActividad3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/activity_3"
        app:cornerRadius="0sp" />

    <Button
        android:id="@+id/btnActividad4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/activity_4"
        app:cornerRadius="0sp" />

    <Button
        android:id="@+id/btnActividad5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/activity_5"
        app:cornerRadius="0sp" />

</LinearLayout>